Update URL GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <meta property="og:title" content="Rony Freitas"/>
     <meta property="og:description" content="My Page Personal"/>
     <meta property="og:locale" content="pt_BR"/>
-    <meta property="og:url" content="https://rony-freitas.github.io"/>
+    <meta property="og:url" content="https://ronysfreitas.github.io"/>
     <meta property="og:image" content="/images/profile.jpg">
 
     <title>Rony Freitas</title>
@@ -39,17 +39,17 @@
 <body>
   <aside>
     <div>
-      <a href="https://rony-freitas.github.io">
+      <a href="https://ronysfreitas.github.io">
         <img src="images/profile.jpg" alt="Rony Freitas" title="Rony Freitas">
       </a>
-      <h1><a href="https://rony-freitas.github.io">Rony Freitas</a></h1>
+      <h1><a href="https://ronysfreitas.github.io">Rony Freitas</a></h1>
 
         <hr/>
         <p>Hello, World! I’m a Computer Engineer student and work as a Full-Stack Developer web and mobile!</p>
         <hr/>
 
       <ul class="social">
-        <li><a class="sc-github" href="https://github.com/rony-freitas" target="_blank"><i class="fa fa-github"></i></a></li>
+        <li><a class="sc-github" href="https://github.com/ronysfreitas" target="_blank"><i class="fa fa-github"></i></a></li>
         <li><a class="sc-facebook" href="http://fb.com/rony.soares.freitas" target="_blank"><i class="fa fa-facebook"></i></a></li>
         <li><a class="sc-linkedin" href="https://www.linkedin.com/in/rony-freitas/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
       </ul>
@@ -61,7 +61,7 @@
   <main>
 
     <nav>
-      <a href="https://rony-freitas.github.io">Home</a>
+      <a href="https://ronysfreitas.github.io">Home</a>
       <a href="#">Desenvolvimento</a>
       <a href="#">Trabalhos</a>
       <a href="mailto:ronyfreitas98@gmail.com" target="_top">Contato</a>
@@ -136,7 +136,7 @@
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " Rony Freitas ",
-  "url" : "https://rony-freitas.github.io",
+  "url" : "https://ronysfreitas.github.io",
   "image": "/images/profile.jpg",
   "description": "My Page Personal"
 }
