--- a/index.html
+++ b/index.html
@@ -77,6 +77,19 @@
             <a href="http://alexandrevicenzi.com" target="_blank">Alexandre Vicenzi</a>
         </p>    
     </footer>
+
+    <!-- Load Facebook SDK for JavaScript -->
+    <div id = 'fb-root'></div>
+    <script>
+    (function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s);
+      js.id = id;
+      js.src = '//connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v2.5';
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
+    </script>
 </main>
 </body>
 </html>
