--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
     <meta property="og:site_name" content="Rony Freitas"/>
     <meta property="og:type" content="blog"/>
     <meta property="og:title" content="Rony Freitas"/>
-    <meta property="og:description" content="My Page Personal"/>
+    <meta property="og:description" content="My Personal Page"/>
     <meta property="og:locale" content="pt_BR"/>
     <meta property="og:url" content="https://ronysfreitas.github.io"/>
-    <meta property="og:image" content="/images/profile.jpg">
+    <meta property="og:image" content="/images/profile_.png">
 
 </head>
 <body ng-controller="AppCtrl">
