--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
     <meta name="author" content="Rony Freitas" />
     <meta name="description" content="My Page Personal" />
     <meta property="og:site_name" content="Rony Freitas"/>
-    <meta property="og:type" content="blog"/>
+    <meta property="og:type" content="article"/>
     <meta property="og:title" content="Rony Freitas"/>
     <meta property="og:description" content="My Personal Page"/>
     <meta property="og:locale" content="pt_BR"/>
     <meta property="og:url" content="https://ronysfreitas.github.io"/>
-    <meta property="og:image" content="/images/profile_.png">
+    <meta property="og:image" content="https://ronysfreitas.github.io/images/profile_.png">
 
 </head>
 <body ng-controller="AppCtrl">
