--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <meta property="og:description" content="My Personal Page"/>
     <meta property="og:locale" content="pt_BR"/>
     <meta property="og:url" content="https://ronysfreitas.github.io"/>
-    <meta property="og:image" content="https://ronysfreitas.github.io/images/profile_.png">
+    <meta property="og:image" content="https://ronysfreitas.github.io/images/profile_2.png">
 
 </head>
 <body ng-controller="AppCtrl">
