--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <meta property="og:site_name" content="Rony Freitas"/>
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Rony Freitas"/>
-    <meta property="og:description" content="My Personal Page"/>
+    <meta property="og:description" content="My Personal Page - Hello, World! I’m a Computer Engineer student and work as a Full-Stack Developer web and mobile!"/>
     <meta property="og:locale" content="pt_BR"/>
     <meta property="og:url" content="https://ronysfreitas.github.io"/>
     <meta property="og:image" content="https://ronysfreitas.github.io/images/profile_2.png">
