Meta Tag Keywords

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="{{myData.nome}}" />
     <meta name="description" content="My Page Personal - {{myData.descricao}}" />
+    <meta name="keywords" content="Rony Soares de Freitas, Rony Freitas, Rony, Programação, Engenharia da Computação, Técnico em Informática, PHP, Android, Java, JavaScript, CSS, C, C++, Mobile, Apps, Aplicativos"/>
     <meta property="og:site_name" content="{{myData.nome}}"/>
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="{{Page.title()}}"/>
