--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="{{myData.nome}}" />
-    <meta name="description" content="My Page Personal - {{myData.descricao}}" />
+    <meta name="author" content="Rony Freitas" />
+    <meta name="description" content="My Page Personal - Hello, World! I’m Rony Soares de Freitas, a Computer Engineer student, Computer Technician and Developer Full-Stack Web and Mobile. Tech Lover #0010" />
     <meta name="keywords" content="Rony Soares de Freitas, Rony Freitas, Rony, Programação, Engenharia da Computação, Técnico em Informática, PHP, Android, Java, JavaScript, CSS, C, C++, Mobile, Apps, Aplicativos"/>
-    <meta property="og:site_name" content="{{myData.nome}}"/>
+    <meta property="og:site_name" content="Rony Freitas"/>
     <meta property="og:type" content="article"/>
-    <meta property="og:title" content="{{Page.title()}}"/>
-    <meta property="og:description" content="My Personal Page - {{myData.descricao}}"/>
+    <meta property="og:title" content="Rony Freitas"/>
+    <meta property="og:description" content="My Personal Page - Hello, World! I’m Rony Soares de Freitas, a Computer Engineer student, Computer Technician and Developer Full-Stack Web and Mobile. Tech Lover #0010"/>
     <meta property="og:locale" content="pt_BR"/>
     <meta property="og:url" content="https://ronysfreitas.github.io"/>
     <meta property="og:image" content="https://ronysfreitas.github.io/images/profile_2.png">
