Downgrade Descriptions Angular

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt" ng-app="app" ng-controller="AppCtrl">
+<html lang="pt" ng-app="app">
 <head>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -41,7 +41,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
     <!-- Meta Tags -->
-    <title>{{Page.title()}}</title>
+    <title>Rony Freitas</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -57,7 +57,7 @@
     <meta property="og:image" content="https://ronysfreitas.github.io/images/profile_2.png">
 
 </head>
-<body>
+<body ng-controller="AppCtrl">
 
   <aside>
     <div>
