Update Plugin Facebook

--- a/index.html
+++ b/index.html
@@ -92,18 +92,15 @@
     </footer>
 </main>
 
-<!-- Load Facebook SDK for JavaScript -->
-<div id = 'fb-root'></div>
-<script>
-(function(d, s, id) {
+<!-- Plugin Facebook SDK -->
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
-  js = d.createElement(s);
-  js.id = id;
-  js.src = '//connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v2.10';
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v2.10&appId=241209233072745";
   fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));
-</script>
+}(document, 'script', 'facebook-jssdk'));</script>
 
 </body>
 </html>
